--- a/themes/zuzu/layouts/partials/head/prerender.html
+++ b/themes/zuzu/layouts/partials/head/prerender.html
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href={{"/css/vendor/bootstrap.min.css" | absURL }} />
+<!-- <link rel="stylesheet" href={{"/css/vendor/bootstrap.min.css" | absURL }} />
 <link rel="stylesheet" href={{"/css/vendor/aos.css" | absURL }} />
-<link rel="stylesheet" href={{"/css/vendor/progress-image.css" | absURL }} />  
+<link rel="stylesheet" href={{"/css/vendor/progress-image.css" | absURL }} />   -->
 <link rel="stylesheet" href={{"/css/vendor/bootstrap.min.css" | relURL }} />
 <link rel="stylesheet" href={{"/css/vendor/aos.css" | relURL }} />
 <link rel="stylesheet" href={{"/css/vendor/progress-image.css" | relURL }} />  
