Fix the web access contrast issue

--- a/themes/zuzu/static/scss/components/_link.scss
+++ b/themes/zuzu/static/scss/components/_link.scss
@@ -1,5 +1,5 @@
 a.no-decoration {
-    color: $disabledText;
+    color: $bodyText;
     text-decoration: none;
     &:hover {
         text-decoration: underline;
