--- a/themes/zuzu/layouts/_default/baseof.html
+++ b/themes/zuzu/layouts/_default/baseof.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lnag="{{.Site.Language}}">
+<html lang="ko">
   {{- partial "head/head.html" . -}}
   <body>
     {{- partial "header/header.html" . -}}
     {{- partial "header/banner.html" . -}}
     <div id="content">{{- block "main" . }}{{- end }}</div>
-    {{- partial "footer/footer.html" . -}} 
+    {{- partial "footer/footer.html" . -}}
     {{- partial "script.html" . -}}
   </body>
 </html>
