--- a/themes/zuzu/layouts/partials/section/customer.html
+++ b/themes/zuzu/layouts/partials/section/customer.html
@@ -6,9 +6,7 @@
                 <h2 class="section-title text-center">
                     6개월 만에 <span data-countup class="highlight">1447</span>명이 넘는 대표님이 가입하셨어요
                 </h2>
-                <h3 class="section-subtitle text-center">
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                <h3>
+                <h3 class="section-subtitle text-center">Lorem Ipsum is simply dummy text of the printing and typesetting industry.<h3>
         </div>
 
         <div class="row">
