--- a/themes/zuzu/layouts/partials/section/customer.html
+++ b/themes/zuzu/layouts/partials/section/customer.html
@@ -14,9 +14,9 @@
                 <div class="col-md-3" data-aos="fade-up" data-aos-delay={{ .delay}} data-aos-anchor="#customer">
                     <div class="custom-card">
                         <div class="custom-card-content">
-                            <h5>
+                            <div>
                                 {{ .review}}
-                            </h5>
+                            </div>
                         </div>
                         <div class="custom-card-meta">
                             <img class="custom-card-meta-image" src="https://via.placeholder.com/48" />
