--- a/themes/zuzu/layouts/partials/section/voucher.html
+++ b/themes/zuzu/layouts/partials/section/voucher.html
@@ -1,7 +1,7 @@
 <div id="k-voucher" class="container panel-medium" data-aos="zoom-in"
-    data-aos-ancho="panel-medium">    
-    <div class="col-md-9 d-flex align-items-center">
-            <img src="/assets/images/pack/SprintingDoodle.svg" alt="비대면바우처" class="custom-icon-160 panel-medium-image">
+    data-aos-ancho="panel-medium">
+    <div class="col-md-8 d-flex align-items-center">
+            <img src="/assets/images/pack/ZombieingDoodleWhite.svg" alt="비대면바우처" class="custom-icon-160 panel-medium-image">
             <div class="panel-medium-text-wrapper">
                 <h5 class="panel-medium-title">
                     주주가 비대면 바우처 공급 기업으로 선정되었어요 🎉
@@ -11,15 +11,14 @@
                 </p>
             </div>
         </div>
-            
-            <div class="col-md-3">
+            <div class="col-md-4">
             <button class="button button-secondary button-medium">
-                <span>쿠폰 사용 방법</span>
+                <span>바우처 사용 방법</span>
                 <i data-feather="chevron-right" width="16"></i>
             </button>
             <button class="button button-primary button-medium">
                 <span>쿠폰 구매하기</span>
                 <i data-feather="chevron-right" width="16"></i>
             </button>
-        </div>    
+        </div>
 </div>
