--- a/docs/scss/base/_typography.scss
+++ b/docs/scss/base/_typography.scss
@@ -1,12 +1,5 @@
 /**
- * * NOTICE
-  FLUID TYPOGRAPHY SYSTEM
-  https://css-tricks.com/snippets/css/fluid-typography/
-  https://css-tricks.com/simplified-fluid-typography/
- */
-
-/**
- * * TYPE SCALE STARTS;
+ * * TYPE SCALE
  * MAJOR-THIRD(* 1.25) MODULAR TYPE SCALE
  * https://type-scale.com/
 */
@@ -28,13 +21,47 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+p {
   line-height: 1.75;
+  color: $bodyText;
 }
 
-/**
- * * TYPOGRAPHY MIXIN STARTS;
- */
+h1 {
+  margin-top: 0;
+  font-size: 3.052rem;
+  font-weight: $bold;
+  letter-spacing: -0.04rem;
+  color: $subtitleText;
+}
+h2 {
+  font-size: 2.441rem;
+  font-weight: $bold;
+  letter-spacing: -0.03rem;
+}
+h3 {
+  font-size: 1.953rem;
+  font-weight: $bold;
+  letter-spacing: -0.02rem;
+}
+h4 {
+  font-size: 1.563rem;
+  font-weight: $medium;
+  letter-spacing: -0.02rem;
+}
+h5 {
+  font-size: 1.25rem;
+  font-weight: $medium;
+  letter-spacing: -0.02rem;
+}
+p {
+  font-size: 1rem;
+  font-weight: $medium;
+  letter-spacing: -0.01rem;
+  @include media-break-point-down {
+    font-size: 1.25rem;
+  }
+}
 
 @mixin heading1($line-height, $font-weight: $black) {
   margin-top: 0;
