--- a/docs/scss/components/_button.scss
+++ b/docs/scss/components/_button.scss
@@ -24,7 +24,7 @@
   }
 
   & + & {
-    margin-left: $baseUnit;
+    margin-left: $baseUnit * 0.5;
   }
 
   /**
@@ -46,6 +46,11 @@
   &-medium {
     padding: $baseUnit * 1 $baseUnit * 1.5;
     @include body-text(1, $bold);
+    &.down-sm-width-100 {
+      @include media-break-point-down {
+        padding: $baseUnit * 1.5 $baseUnit * 1.5 * 1.5;
+      }
+    }
   }
   &-small {
     padding: $baseUnit * 0.5 $baseUnit;
