--- a/themes/zuzu/layouts/index.html
+++ b/themes/zuzu/layouts/index.html
@@ -9,12 +9,12 @@
                             class="custom-icon-40" alt="sparkle" />
                         <h1 class="main-title">{{.Params.title}}</h1>
                         <img src={{.Site.Data.link.common.sparkle}}
-                            class="custom-icon-40" alt="sparkle" />
+                            class="custom-icon-40 flip-horizontal" alt="sparkle" />
                     </div>
                     <h2 class="main-subtitle text-center">Traditional web
                         analytics tools help you analyze traffic data. <br/>
                             But numbers alone can’t tell you what users really
-                            do on your site — <span class="highlight">ZUZU LEGAL will.</span></h2>
+                            do on your site — <span class="highlight">주주 리걸이 해내요.</span></h2>
                         <div class="d-flex align-items-center justify-content-center">
                             <button class="button button-large
                                 button-secondary">
