--- a/themes/zuzu/layouts/partials/footer/footer.html
+++ b/themes/zuzu/layouts/partials/footer/footer.html
@@ -8,77 +8,74 @@
         <div class="col-md-3">
           <ul class="footer-group">
             <li class="footer-group-title">
-              <p>정보</p>
+              정보
             </li>
             <li class="footer-group-list">
               <a href="https://www.notion.so/f3710bea015740f8ad76941a30214635"
-                target="_blank" class="no-decoration">채용</a>
+                target="_blank">채용</a>
               <span class="badge badge-secondary">HOT!</span>
             </li>
             <li class="footer-group-list">
-              <a href="#" target="_blank" title="주주 팀 바로가기"
-                class="no-decoration">주주 팀</a>
+              <a href="#" target="_blank" title="주주 팀 바로가기">주주 팀</a>
             </li>
             <li class="footer-group-list">
-              <a href="https://blog.zuzu.network" target="_blank"
-                class="no-decoration">블로그</a>
+              <a href="https://blog.zuzu.network" target="_blank">블로그</a>
             </li>
             <li class="footer-group-list">
-              <a href="https://help.zuzu.network" target="_blank"
-                class="no-decoration">헬프</a>
+              <a href="https://help.zuzu.network" target="_blank">헬프</a>
             </li>
           </ul>
         </div>
         <div class="col-md-3">
           <ul class="footer-group">
             <li class="footer-group-title">
-              <p>주주 패밀리 서비스</p>
+              주주 패밀리 서비스
             </li>
             <li class="footer-group-list">
-              <a target="_blank" href="https://zuzu.network" title="주주 바로가기"
-                class="no-decoration">주주</a>
+              <a target="_blank" href="https://zuzu.network" title="주주 바로가기">주주</a>
             </li>
             <li class="footer-group-list">
               <a target="_blank" href="https://legal.zuzu.network" title="주주리걸
-                바로가기" class="no-decoration">
+                바로가기">
                 주주 리걸
               </a>
             </li>
             <li class="footer-group-list">
               <a target="_blank" href="https://delivery.zuzu.network" title="주주
-                딜리버리 바로가기" class="no-decoration">주주 딜리버리</a>
+                딜리버리 바로가기">주주 딜리버리</a>
+            </li>
+            <li class="footer-group-list">
+              <a target="_blank" href="#" title="주주 패밀리 서비스 소개서">주주 패밀리 서비스 소개서</a>
             </li>
           </ul>
         </div>
         <div class="col-md-3">
           <ul class="footer-group">
             <li class="footer-group-title">
-              <p>이용약관 및 개인정보처리방침</p>
+              이용약관 및 개인정보처리방침
             </li>
             <li class="footer-group-list">
-              <a target="_blank" href="#" title="이용약관" class="no-decoration">이용약관</a></li>
+              <a target="_blank" href="#" title="이용약관">이용약관</a></li>
             <li class="footer-group-list">
-              <a target="_blank" href="#" title="개인정보처리방침"
-                class="no-decoration">개인정보처리방침</a>
+              <a target="_blank" href="#" title="개인정보처리방침">개인정보처리방침</a>
             </li>
           </ul>
         </div>
         <div class="col-md-3">
           <ul class="footer-group">
             <li class="footer-group-title">
-              <p>고객센터</p>
+              이메일 및 제휴 문의
             </li>
             <li class="footer-group-list">
               <a
                 href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=help@zuzu.network"
-                target="_blank" title="이메일 문의" class="no-decoration">이메일 문의</a>
+                target="_blank" title="이메일 문의">이메일 문의(고객전용)</a>
             </li>
             <li class="footer-group-list">
               <a
                 href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=partner@zuzu.network"
-                target="_blank" title="이메일 문의" class="no-decoration">제휴 문의</a>
+                target="_blank" title="이메일 문의">제휴 문의</a>
             </li>
-            <li class="footer-group-list"></li>
           </ul>
         </div>
       </div>
@@ -86,34 +83,29 @@
       <div class="row">
         <ul class="footer-group">
           <li class="footer-group-title">
-            <p>(주) 코드박스 | Kodebox Inc.</p>
+            (주) 코드박스 | Kodebox Inc.
           </li>
           <li class="footer-group-company-info">
-            <p>
               대표: 서광열 | 사업자등록번호: 107-88-42217 | 통신판매업번호:
               2017-서울강남-04048 호
-            </p>
           </li>
           <li class="footer-group-company-info">
-            <p>
-              주소: 서울시 강남구 테헤란로 129 7층 |
-              <a href="https://kodebox.io/" target="_blank" title="코드박스 웹사이트"
-                class="no-decoration">웹사이트</a>
-            </p>
+              주소: 서울시 강남구 테헤란로 129 7층 | 웹사이트: kodebox.io
+
           </li>
           <li class="footer-group-company-info">
-            <p>Copyright {{ now.Format "2006" }} © Kodebox. All Rights Reserved.</p>
+            Copyright {{ now.Format "2006" }} © Kodebox. All Rights Reserved.
           </li>
+        </ul>
+        <ul class="footer-group-social">
+          <li class="footer-group-social-group-list"><a href="" title="주주 페이스북"><span><i
+                  data-feather="facebook" width="14"></i></span></a></li>
+          <li class="footer-group-social-group-list"><a href="" title="주주 유튜브"><span><i
+                  data-feather="youtube" width="14"></i></span></a></li>
         </ul>
       </div>
-
       <div class="row">
-        <ul class="footer-group-social">
-          <li class="footer-group-social-group-list"><a href=""><span><i
-                  data-feather="facebook" width="18"></i></span></a></li>
-          <li class="footer-group-social-group-list"><a href=""><span><i
-                  data-feather="youtube" width="18"></i></span></a></li>
-        </ul>
+        {{- partial "footer/subscription" . }}
       </div>
     </div>
   </div>
