--- a/themes/zuzu/layouts/partials/section/statistics.html
+++ b/themes/zuzu/layouts/partials/section/statistics.html
@@ -1,10 +1,11 @@
+<div class="container">
     <div class="row justify-content-center">
-        <div class="col-md-10 panel-large statistics" data-aos="fade-up"
+        <div class="col-md-12 panel-large statistics" data-aos="fade-up"
             data-aos-duration="732" data-aos-offset="20"
             data-aos-anchor=".statistics">
             <div class="row reveal-row-wrapper">
                 {{ range $.Site.Data.section.statistics}}
-                <div class="col reveal">
+                <div class="col-md-3 reveal">
                     <div class="reveal-item">
                         <img src="https://via.placeholder.com/56"
                             alt="placeholder"
@@ -24,3 +25,4 @@
             </div>
         </div>
     </div>
+</div>
