--- a/themes/zuzu/static/css/main.css
+++ b/themes/zuzu/static/css/main.css
@@ -2,118 +2,6 @@
 * ! THIS FILE SHOULD ONLY CONTAIN IMPORTS!
 */
 @use "sass:color";
-*,
-*:before,
-*:after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-html,
-body,
-div,
-span,
-object,
-iframe,
-figure,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-code,
-em,
-img,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-b,
-u,
-i,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-main,
-canvas,
-embed,
-footer,
-header,
-nav,
-section,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -webkit-text-size-adjust: none;
-     -moz-text-size-adjust: none;
-      -ms-text-size-adjust: none;
-          text-size-adjust: none;
-}
-
-footer,
-header,
-nav,
-section,
-main {
-  display: block;
-}
-
-body {
-  line-height: 1;
-}
-
-ol,
-ul {
-  list-style: none;
-}
-
-blockquote,
-q {
-  quotes: none;
-}
-
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: '';
-  content: none;
-}
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-
-input {
-  -webkit-appearance: none;
-  border-radius: 0;
-}
-
 /** TO DO: ADD GRADIENT BACKGROUND SECONDARY (WE ALREADY USE IN BANNER.SCSS) */
 /** TO DO: CHANGE BOX-SHADOW TO FUNCTION */
 @media screen and (max-width: 600px) {
@@ -126,19 +14,12 @@ input {
 }
 
 /**
- * * NOTICE
-  FLUID TYPOGRAPHY SYSTEM
-  https://css-tricks.com/snippets/css/fluid-typography/
-  https://css-tricks.com/simplified-fluid-typography/
- */
-/**
- * * TYPE SCALE STARTS;
+ * * TYPE SCALE
  * MAJOR-THIRD(* 1.25) MODULAR TYPE SCALE
  * https://type-scale.com/
 */
 html {
   font-family: "Noto Sans KR", "Noto Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  /** JUST IN CASE THAT YOU'D LIKE TO ACTIVE A SYSTEM FONT ONLY  */
   font-size: 16px;
 }
 
@@ -152,13 +33,61 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+p {
   line-height: 1.75;
+  color: #535353;
 }
 
-/**
- * * TYPOGRAPHY MIXIN STARTS;
- */
+h1 {
+  margin-top: 0;
+  font-size: 3.052rem;
+  font-weight: 700;
+  letter-spacing: -0.05rem;
+  color: #2e2e31;
+}
+
+h2 {
+  font-size: 2.441rem;
+  font-weight: 700;
+  letter-spacing: -0.04rem;
+}
+
+h3 {
+  font-size: 1.953rem;
+  font-weight: 700;
+  letter-spacing: -0.04rem;
+}
+
+h4 {
+  font-size: 1.563rem;
+  font-weight: 500;
+  letter-spacing: -0.03rem;
+}
+
+h5 {
+  font-size: 1.25rem;
+  font-weight: 500;
+  letter-spacing: -0.03rem;
+}
+
+p {
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: -0.02rem;
+}
+
+@media screen and (max-width: 600px) {
+  p {
+    font-size: 1.25rem;
+  }
+}
+
+b,
+strong {
+  font-weight: 700;
+}
+
 html {
   overflow-x: hidden;
 }
@@ -171,20 +100,49 @@ html {
   margin-top: 6rem;
 }
 
+blockquote {
+  background-color: #eeeeee;
+  padding: 0.75rem;
+  border-radius: 0.1875rem;
+}
+
 *[onclick] {
   cursor: pointer;
 }
 
 img.fluid-100 {
   width: 100%;
-  min-width: 320px;
+  min-width: 240px;
 }
 
 img.fluid-80 {
   width: 80%;
-  min-width: 320px;
+  min-width: 240px;
   margin-left: auto;
   margin-right: auto;
+}
+
+img.fluid-50, img.post-image {
+  width: 50%;
+  min-width: 240px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+img.bordered {
+  border-radius: 0.5625rem;
+}
+
+@media screen and (max-width: 600px) {
+  .down-sm-width-100.down-sm-width-100 {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .down-sm-width-100 + .down-sm-width-100 {
+    margin-top: 1.5rem;
+  }
 }
 
 span.highlight {
@@ -224,8 +182,6 @@ section {
 
 section .main-title {
   margin-bottom: 0.75rem;
-  margin-right: 0.375rem;
-  margin-left: 0.375rem;
   margin-top: 0;
   font-size: 3.052rem;
   font-weight: 900;
@@ -233,6 +189,8 @@ section .main-title {
   color: #2e2e31;
   line-height: 1.4;
   color: #2e2e31;
+  word-wrap: break-word;
+  word-break: break-all;
 }
 
 section .main-title-wrapper {
@@ -450,12 +408,12 @@ section.background-light {
   }
 }
 
-a.no-decoration {
+a.no-decoration, footer .footer-group-list a, footer .footer-group-social-group-list a {
   color: #535353;
   text-decoration: none;
 }
 
-a.no-decoration:hover {
+a.no-decoration:hover, footer .footer-group-list a:hover, footer .footer-group-social-group-list a:hover {
   text-decoration: underline;
 }
 
@@ -499,7 +457,7 @@ a.no-decoration:hover {
 }
 
 .button + .button {
-  margin-left: 0.75rem;
+  margin-left: 0.375rem;
 }
 
 .button-large {
@@ -543,6 +501,12 @@ a.no-decoration:hover {
   }
 }
 
+@media screen and (max-width: 600px) {
+  .button-medium.down-sm-width-100 {
+    padding: 1.125rem 1.6875rem;
+  }
+}
+
 .button-small {
   padding: 0.375rem 0.75rem;
   font-size: 0.9rem;
@@ -577,12 +541,12 @@ a.no-decoration:hover {
   background-color: transparent;
 }
 
-a.no-decoration {
+a.no-decoration, footer .footer-group-list a, footer .footer-group-social-group-list a {
   color: #535353;
   text-decoration: none;
 }
 
-a.no-decoration:hover {
+a.no-decoration:hover, footer .footer-group-list a:hover, footer .footer-group-social-group-list a:hover {
   text-decoration: underline;
 }
 
@@ -977,7 +941,7 @@ nav.main-nav .active .nav-link {
       -ms-flex-pack: justify;
           justify-content: space-between;
   font-size: 0.9rem;
-  font-weight: 500;
+  font-weight: 400;
   letter-spacing: 0.01rem;
   line-height: 1;
 }
@@ -1025,14 +989,13 @@ nav.main-nav .active .nav-link {
   border-radius: 0.5625rem;
   -webkit-box-shadow: 0 8px 14px 0 rgba(56, 64, 82, 0.08), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
           box-shadow: 0 8px 14px 0 rgba(56, 64, 82, 0.08), 0 4px 6px 0 rgba(0, 0, 0, 0.12);
-  border-color: #e6e6e6;
+  border: none;
 }
 
 @media screen and (max-width: 600px) {
   .custom-dropdown-menu {
     -webkit-box-shadow: none;
             box-shadow: none;
-    border: none;
   }
 }
 
@@ -1315,28 +1278,42 @@ nav.main-nav .active .nav-link {
 
 .table thead th,
 .table thead td {
+  padding: 0.75rem 1.5rem;
   background-color: #ebebeb;
-  padding: 0.75rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 500;
-  letter-spacing: -0.02rem;
+  letter-spacing: -0.01rem;
   line-height: 1.75;
   color: #2e2e31;
   word-wrap: break-word;
   vertical-align: middle;
 }
 
+@media screen and (max-width: 600px) {
+  .table thead th,
+  .table thead td {
+    font-size: 1.25rem;
+  }
+}
+
 .table tbody th,
 .table tbody td {
   padding: 0.75rem 1.5rem;
   vertical-align: middle;
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 500;
-  letter-spacing: -0.02rem;
+  letter-spacing: -0.01rem;
   line-height: 2;
   color: #535353;
   word-wrap: break-word;
   vertical-align: middle;
+}
+
+@media screen and (max-width: 600px) {
+  .table tbody th,
+  .table tbody td {
+    font-size: 1.25rem;
+  }
 }
 
 .table tbody th {
@@ -1361,6 +1338,178 @@ nav.main-nav .active .nav-link {
 .table-bordered tbody tr th,
 .table-bordered tbody tr td {
   border: 1px solid #e6e6e6;
+}
+
+.input-subscription {
+  padding: 0.75rem;
+  width: 22.5rem;
+  min-width: 320px;
+  border-radius: 3.75rem;
+  border: none;
+}
+
+.input-subscription::-webkit-input-placeholder {
+  font-size: 0.9rem;
+  font-weight: 500;
+  letter-spacing: 0.01rem;
+  line-height: 1;
+}
+
+.input-subscription:-ms-input-placeholder {
+  font-size: 0.9rem;
+  font-weight: 500;
+  letter-spacing: 0.01rem;
+  line-height: 1;
+}
+
+.input-subscription::-ms-input-placeholder {
+  font-size: 0.9rem;
+  font-weight: 500;
+  letter-spacing: 0.01rem;
+  line-height: 1;
+}
+
+.input-subscription::placeholder {
+  font-size: 0.9rem;
+  font-weight: 500;
+  letter-spacing: 0.01rem;
+  line-height: 1;
+}
+
+@media screen and (max-width: 600px) {
+  .input-subscription::-webkit-input-placeholder {
+    font-size: 1.25rem;
+  }
+  .input-subscription:-ms-input-placeholder {
+    font-size: 1.25rem;
+  }
+  .input-subscription::-ms-input-placeholder {
+    font-size: 1.25rem;
+  }
+  .input-subscription::placeholder {
+    font-size: 1.25rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .input-subscription {
+    padding: 1.5rem;
+  }
+}
+
+.form-title {
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: -0.01rem;
+  line-height: 1.75;
+  margin-bottom: 0.5625rem;
+  color: #535353;
+}
+
+@media screen and (max-width: 600px) {
+  .form-title {
+    font-size: 1.25rem;
+  }
+}
+
+.form-subtitle {
+  font-size: 0.9rem;
+  font-weight: 400;
+  letter-spacing: 0.01rem;
+  line-height: 1.75;
+  margin-bottom: 0.75rem;
+  color: #535353;
+}
+
+@media screen and (max-width: 600px) {
+  .form-subtitle {
+    font-size: 1.25rem;
+  }
+}
+
+.post {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 600px) {
+  .post {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .post {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+  }
+}
+
+.post-text-wrapper {
+  margin-left: 1.5rem;
+}
+
+.post-title {
+  margin-bottom: 0.75rem;
+  font-size: 1.25rem;
+  font-weight: 700;
+  letter-spacing: -0.02rem;
+  line-height: 1.75;
+  color: #535353;
+}
+
+.post-content {
+  font-size: 0.9rem;
+  font-weight: 500;
+  letter-spacing: 0.01rem;
+  line-height: 1.75;
+  color: #535353;
+}
+
+@media screen and (max-width: 600px) {
+  .post-content {
+    font-size: 1.25rem;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .post-content {
+    max-width: 80%;
+    word-break: break-all;
+    word-wrap: break-word;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .post-image {
+    width: 160px;
+    min-width: 160px;
+  }
 }
 
 footer {
@@ -1391,9 +1540,9 @@ footer .footer-group .footer-group-social-group-list p {
 footer .footer-group-title {
   margin-bottom: 0.375rem;
   color: #535353;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 700;
-  letter-spacing: -0.01rem;
+  letter-spacing: 0.01rem;
   line-height: 2;
 }
 
@@ -1406,9 +1555,10 @@ footer .footer-group-title {
 footer .footer-group-list, footer .footer-group-social-group-list {
   padding: 0.5625rem 0;
   font-size: 0.9rem;
-  font-weight: 500;
+  font-weight: 400;
   letter-spacing: 0.01rem;
   line-height: 1.75;
+  color: #535353;
 }
 
 @media screen and (max-width: 600px) {
@@ -1418,11 +1568,11 @@ footer .footer-group-list, footer .footer-group-social-group-list {
 }
 
 footer .footer-group-company-info {
+  padding: 0.5625rem 0;
   font-size: 0.9rem;
-  font-weight: 500;
+  font-weight: 400;
   letter-spacing: 0.01rem;
-  line-height: 2;
-  padding: 0;
+  line-height: 1.25;
   color: #535353;
 }
 
@@ -1478,10 +1628,10 @@ footer .footer-group-social-group-list span {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
-  width: 2.25rem;
-  height: 2.25rem;
+  width: 1.875rem;
+  height: 1.875rem;
   border-radius: 100%;
-  background-color: #535353;
+  background-color: #9e9e9e;
 }
 
 footer .footer-group-social-group-list span svg {
