--- a/themes/zuzu/static/scss/base/_typography.scss
+++ b/themes/zuzu/static/scss/base/_typography.scss
@@ -1,12 +1,5 @@
 /**
- * * NOTICE
-  FLUID TYPOGRAPHY SYSTEM
-  https://css-tricks.com/snippets/css/fluid-typography/
-  https://css-tricks.com/simplified-fluid-typography/
- */
-
-/**
- * * TYPE SCALE STARTS;
+ * * TYPE SCALE
  * MAJOR-THIRD(* 1.25) MODULAR TYPE SCALE
  * https://type-scale.com/
 */
@@ -14,10 +7,6 @@
 html {
   font-family: "Noto Sans KR", "Noto Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue",
     Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  /** JUST IN CASE THAT YOU'D LIKE TO ACTIVE A SYSTEM FONT ONLY  */
-  // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif,
-  //   "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-
   font-size: 16px;
   @include media-break-point-down {
     font-size: calc(16px * 2 / 3);
@@ -28,13 +17,51 @@ h1,
 h2,
 h3,
 h4,
-h5 {
+h5,
+p {
   line-height: 1.75;
+  color: $bodyText;
 }
 
-/**
- * * TYPOGRAPHY MIXIN STARTS;
- */
+h1 {
+  margin-top: 0;
+  font-size: 3.052rem;
+  font-weight: $bold;
+  letter-spacing: -0.05rem;
+  color: $subtitleText;
+}
+h2 {
+  font-size: 2.441rem;
+  font-weight: $bold;
+  letter-spacing: -0.04rem;
+}
+h3 {
+  font-size: 1.953rem;
+  font-weight: $bold;
+  letter-spacing: -0.04rem;
+}
+h4 {
+  font-size: 1.563rem;
+  font-weight: $medium;
+  letter-spacing: -0.03rem;
+}
+h5 {
+  font-size: 1.25rem;
+  font-weight: $medium;
+  letter-spacing: -0.03rem;
+}
+p {
+  font-size: 1rem;
+  font-weight: $regular;
+  letter-spacing: -0.02rem;
+  @include media-break-point-down {
+    font-size: 1.25rem;
+  }
+}
+b,
+strong {
+  font-weight: $bold;
+}
 
 @mixin heading1($line-height, $font-weight: $black) {
   margin-top: 0;
