Footer header style

--- a/themes/zuzu/layouts/_default/guide-content.html
+++ b/themes/zuzu/layouts/_default/guide-content.html
@@ -3,7 +3,7 @@
     <h1 class="text-reset mb-2">{{.Title}}</h1>
     <span>
         <span class="text-reset" style="margin-right:1rem;">작성자: {{.Params.author}}</span>
-        <span class="text-reset">읽기 시간: {{.Params.readingTime}}분</span>
+        <span class="text-reset">읽기 시간: <span data-countUp >{{.Params.readingTime}}</span>분</span>
     </span>
 </div>
 <section>
