--- a/themes/zuzu/static/css/main.css
+++ b/themes/zuzu/static/css/main.css
@@ -1539,9 +1539,9 @@ footer .footer-group .footer-group-social-group-list p {
 
 footer .footer-group-title {
   margin-bottom: 0.375rem;
-  color: #535353;
+  color: #2e2e31;
   font-size: 0.9rem;
-  font-weight: 700;
+  font-weight: 500;
   letter-spacing: 0.01rem;
   line-height: 2;
 }
