Pricing table width

--- a/themes/zuzu/static/scss/main.scss
+++ b/themes/zuzu/static/scss/main.scss
@@ -9,3 +9,4 @@
     "components/reveal-item", "components/badge", "components/table", "components/input", "components/form",
     "components/post";
 @import "layout/footer", "layout/cta";
+x
