Update some components

--- a/themes/zuzu/layouts/_default/guide-content.html
+++ b/themes/zuzu/layouts/_default/guide-content.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="jumbotron text-center" style="background-color:#f7f7f7; padding:8rem 0rem;">
+<div class="jumbotron text-center bg-light" >
     <h1 class="text-reset mb-2">{{.Title}}</h1>
     <span>
         <span style="margin-right:1rem;">작성자: {{.Params.author}}</span>
