--- a/themes/zuzu/layouts/partials/section/main/jumbotron-centered.html
+++ b/themes/zuzu/layouts/partials/section/main/jumbotron-centered.html
@@ -1,4 +1,4 @@
-<section style="background-color:yellowgreen">
+<section class="bg-light">
     <div class="container">
         <div class="row align-items-center">
             <div class="col-md-6">
