--- a/themes/zuzu/layouts/partials/footer/footer.html
+++ b/themes/zuzu/layouts/partials/footer/footer.html
@@ -55,9 +55,9 @@
               이용약관 및 개인정보처리방침
             </li>
             <li class="footer-group-list">
-              <a target="_blank" href="#" title="이용약관">이용약관</a></li>
+              <a target="_blank" href={{"term-and-privacy/term" | absURL}} title="이용약관">이용약관</a></li>
             <li class="footer-group-list">
-              <a target="_blank" href="#" title="개인정보처리방침">개인정보처리방침</a>
+              <a target="_blank" href={{"term-and-privacy/privacypolicy" | absURL}} title="개인정보처리방침">개인정보처리방침</a>
             </li>
           </ul>
         </div>
