--- a/themes/zuzu/layouts/_default/guide-content.html
+++ b/themes/zuzu/layouts/_default/guide-content.html
@@ -1,9 +1,9 @@
 {{ define "main" }}
-<div class="jumbotron text-center bg-light" >
-    <h1 class="text-reset mb-2">{{.Title}}</h1>
+<div class="jumbotron text-center bg-dark" style="padding:8rem 0rem;" >
+    <h1 class="text-white mb-2">{{.Title}}</h1>
     <span>
-        <span style="margin-right:1rem;">작성자: {{.Params.author}}</span>
-        <span >읽기 시간: <span data-countUp >{{.Params.readingTime}}</span>분</span>
+        <span class="text-white" style="margin-right:1rem;">작성자: {{.Params.author}}</span>
+        <span class="text-white">읽기 시간: <span data-countUp >{{.Params.readingTime}}</span>분</span>
     </span>
 </div>
 <section>
