--- a/themes/zuzu/layouts/partials/head/head.html
+++ b/themes/zuzu/layouts/partials/head/head.html
@@ -2,4 +2,5 @@
   {{- partial "head/metadata.html" . -}}
   {{- partial "head/favicon.html" . -}}
   {{- partial "head/prerender.html" . -}}
+  {{- partial "head/spinner.html" . -}}
 </head>
