--- a/themes/zuzu/static/scss/base/_global.scss
+++ b/themes/zuzu/static/scss/base/_global.scss
@@ -1,13 +1,8 @@
 // LAYOUT LEVEL
 html,
 body {
-  overflow-x: hidden;
+  overflow-x: visible;
 }
-
-body {
-  position: relative;
-}
-
 .row + .row {
   margin-top: $baseUnit * 4;
 }
