--- a/themes/zuzu/static/scss/components/_form.scss
+++ b/themes/zuzu/static/scss/components/_form.scss
@@ -1,12 +1,12 @@
 .form {
     footer & {
         &-title {
-            @include caption(1.75, $medium);
+            @include body-text(1.75, $medium);
             margin-bottom: $baseUnit * 0.75;
             color: $subtitleText;
         }
         &-subtitle {
-            @include caption(1.75, $regular);
+            @include body-text(1.75, $regular);
             margin-bottom: $baseUnit;
             color: $bodyText;
         }
