--- a/themes/zuzu/layouts/partials/header/banner.html
+++ b/themes/zuzu/layouts/partials/header/banner.html
@@ -2,10 +2,12 @@
     <div class="container">
         <div class="row">
             <div class="banner-title">
-                <div class="row align-items-center">
-                    <div class="d-flex align-items-center">
-                        <div class="badge badge-primary">UPDATE</div>
-                        <div class=banner-summary>{{.Site.Data.banner.banner.title}}</div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="d-flex align-items-center">
+                            <div class="badge badge-primary">UPDATE</div>
+                            <div class=banner-summary>{{.Site.Data.banner.banner.title}}</div>
+                        </div>
                     </div>
                 </div>
             </div>
