--- a/themes/zuzu/layouts/_default/baseof.html
+++ b/themes/zuzu/layouts/_default/baseof.html
@@ -3,6 +3,7 @@
   {{- partial "head/head.html" . -}}
   <body>
     {{- partial "header/header.html" . -}}
+    {{- partial "header/banner.html" . -}}
     <div id="content">{{- block "main" . }}{{- end }}</div>
     {{- partial "footer/footer.html" . -}}
     {{- partial "script.html" . -}}
