--- a/themes/zuzu/layouts/partials/header/banner.html
+++ b/themes/zuzu/layouts/partials/header/banner.html
@@ -1,15 +1,9 @@
 <div class="banner" role="banner">
     <div class="container">
         <div class="row">
-            <div class="banner-title">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="d-flex align-items-center">
-                            <div class="badge badge-primary">UPDATE</div>
-                            <div class=banner-summary>{{.Site.Data.banner.banner.title}}</div>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-12">
+                <span class="badge badge-primary">업데이트</span>
+                <span class=banner-summary>{{.Site.Data.banner.banner.title}}</span>
             </div>
         </div>
     </div>
