--- a/themes/zuzu/static/scss/components/_banner.scss
+++ b/themes/zuzu/static/scss/components/_banner.scss
@@ -1,26 +1,11 @@
 .banner {
-    border-top: 1px solid $hr;
-    @include flex(row, center, flex-start);
     padding: $baseUnit $baseUnit * 3;
-    &-title {
-        @include flex(row, center, space-between);
-        @include caption(1, $regular);
-        @at-root {
-            .banner-summary {
-                margin-left: $baseUnit;
-                @include media-break-point-down {
-                    max-width: 60%;
-                    white-space: nowrap;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                }
-            }
-        }
-        & > *:last-child {
-            margin-left: $baseUnit * 0.5;
-        }
+    &-summary {
+        margin-left: $baseUnit * 0.5;
+        @include caption(1.75, $regular);
     }
     background: $backgroundColor;
+    border-top: 1px solid $hr;
     color: $bodyText;
     button.button {
         margin-left: $baseUnit * 0.5;
