--- a/themes/zuzu/layouts/partials/section/main/feature.html
+++ b/themes/zuzu/layouts/partials/section/main/feature.html
@@ -1,74 +1,59 @@
-<section class="section feature" id="feature">
+<!-- <section class="section feature" id="feature">
   <div class="container">
     <div class="row">
-      <h3 class="section-subtitle">
-        <span class="highlight">주주 리걸 영상으로 먼저 만나보세요!</span>
+      <h3 class="section-subtitle font-weight-bolder">
+        <b>주주 리걸 실제로 이렇게 돌아가요</b>
       </h3>
-    </div>
-    <div class="row down-sm-row-reverse justify-content-center">
-      <div class="col-md-2 col-sm-12">
-        <div class="nav nav-pills" id="v-pills-tab" role="tablist"
-          aria-orientation="vertical">
-          <a class="nav-link nav-divider" data-toggle="pill" role="tab"
-            aria-controls="v-pills-home"
-            aria-selected="true">주요 지원 안건</a>
-          <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
-            href="#v-pills-home" role="tab" aria-controls="v-pills-home"
-            aria-selected="true"><i data-feather="gift" stroke-width="3"
-              width="20"></i>
-            <span>
-              스톡옵션
-            </span></a>
-          <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
-            href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-            aria-selected="false"><i data-feather="dollar-sign" stroke-width="3"
-              width="20"></i>
-            <span>
-              유상증자
-            </span></a>
-          <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
-            href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
-            aria-selected="false"><i data-feather="users" stroke-width="3"
-              width="20"></i>
-            <span>임원 변경</span></a>
-          <a href="#" class="nav-link more">
-            <i data-feather="arrow-right" width="14" height="14"></i> 안건 모두 보기</a>
-          <a class="nav-link nav-divider" data-toggle="pill" role="tab"
-            aria-controls="v-pills-home"
-            aria-selected="true">지원 등기 방법</a>
-          <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill"
-            href="#v-pills-messages" role="tab" aria-controls="v-pills-messages"
-            aria-selected="false"><i data-feather="award"></i>
-            <span>셀프 등기</span></a>
-          <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill"
-            href="#v-pills-settings" role="tab" aria-controls="v-pills-settings"
-            aria-selected="false"><i data-feather="briefcase"></i>
-            <span>등기 대행</span></a>
-        </div>
-      </div>
-
-      <div class="col-md-10 col-sm-12">
-        <!-- STOCKOPTION DETAIL STARTS -->
-        <div class="tab-content" id="v-pills-tabContent">
-          <div class="tab-pane fade show active" id="v-pills-home"
-            role="tabpanel" aria-labelledby="v-pills-home-tab">
-          <iframe width="100%" height="480"
-            src="https://www.youtube.com/embed/8zHsAl0sNlA" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media;
-            gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>   -->
+        <div class="row justify-content-center">
+          <div class="col-md-10 my-4">
+            <ul class="nav nav-pills" id="v-pills-tab" role="tablist">
+            <li>
+              <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill"
+              href="#v-pills-home" role="tab" aria-controls="v-pills-home"
+              aria-selected="true"><i data-feather="gift" stroke-width="3"
+                width="20"></i>
+              <span>
+                스톡옵션
+              </span></a>
+            </li>
+    
+             <li>
+              <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
+              href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
+              aria-selected="false"><i data-feather="dollar-sign" stroke-width="3"
+                width="20"></i>
+              <span>
+                유상증자
+              </span></a>
+             </li>
+    
+              <li>
+                <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill"
+                href="#v-pills-profile" role="tab" aria-controls="v-pills-profile"
+                aria-selected="false"><i data-feather="users" stroke-width="3"
+                  width="20"></i>
+                <span>임원 변경</span></a>
+              </li>
+              </ul>
           </div>
-          <!-- STOCKOPTION DETAIL ENDS -->
-          <div class="tab-pane fade" id="v-pills-profile" role="tabpanel"
-            aria-labelledby="v-pills-profile-tab">Video</div>
-          <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
-            aria-labelledby="v-pills-messages-tab">
-            <iframe src="https://player.vimeo.com/video/500027375" width="640" height="400" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
-          </div>
-          <div class="tab-pane fade" id="v-pills-settings" role="tabpanel"
-            aria-labelledby="v-pills-settings-tab">Video</div>
-        </div>
-      </div>
-    </div>
-  </div>
 
-</section>
+          <div class="col-md-10">
+            <!-- STOCKOPTION DETAIL STARTS -->
+            <div class="tab-content" id="v-pills-tabContent">
+              <div class="tab-pane fade show active" id="v-pills-home"
+                role="tabpanel" aria-labelledby="v-pills-home-tab">
+                <iframe data-aos="fade-up" src="https://player.vimeo.com/video/500027375" width="100%"
+                  height="700" frameborder="0" allow="autoplay; fullscreen"
+                  allowfullscreen></iframe></div>
+            </div>
+            <!-- STOCKOPTION DETAIL ENDS -->
+          </div>
+
+        </div>
+      
+
+
+    
+  <!-- </div>
+</section> -->
