--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -4,15 +4,6 @@
 @use "sass:color";
 /** TO DO: ADD GRADIENT BACKGROUND SECONDARY (WE ALREADY USE IN BANNER.SCSS) */
 /** TO DO: CHANGE BOX-SHADOW TO FUNCTION */
-@media screen and (max-width: 600px) {
-  .down-sm-row-reverse {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: reverse;
-        -ms-flex-direction: row-reverse;
-            flex-direction: row-reverse;
-  }
-}
-
 /**
  * * TYPE SCALE
  * MAJOR-THIRD(* 1.25) MODULAR TYPE SCALE
@@ -257,6 +248,12 @@ section .main-subtitle {
   color: #535353;
 }
 
+@media screen and (max-width: 600px) {
+  section .main-subtitle br {
+    display: none;
+  }
+}
+
 section .main-image {
   margin-top: 2.25rem;
 }
@@ -266,8 +263,8 @@ section .section-title {
   font-weight: 700;
   letter-spacing: -0.03rem;
   line-height: 1.75;
-  color: #2e2e31;
   text-align: center;
+  color: #2e2e31;
 }
 
 section .section-title-wrapper {
@@ -304,13 +301,19 @@ section .section-title-wrapper {
   }
 }
 
+@media screen and (max-width: 600px) {
+  section .section-title br {
+    display: none;
+  }
+}
+
 section .section-subtitle, section .feature-item-title {
   font-size: 1.563rem;
   font-weight: 500;
   letter-spacing: -0.02rem;
   line-height: 1.75;
-  color: #535353;
   text-align: center;
+  color: #535353;
 }
 
 section .section-description {
@@ -477,8 +480,12 @@ a.no-decoration:hover, footer .footer-group-list a:hover, footer .footer-group-s
           transform: translateX(8px);
 }
 
-.button + .button {
-  margin-left: 0.375rem;
+.button-large + .button-large {
+  margin-left: 1.5rem;
+}
+
+.button-medium + .button-medium {
+  margin-left: 0.75rem;
 }
 
 .button-large {
@@ -551,11 +558,8 @@ a.no-decoration:hover, footer .footer-group-list a:hover, footer .footer-group-s
 
 .button-primary {
   color: #ffffff;
-  background-color: #4aa570;
-}
-
-.button-primary:hover {
-  background: #408f61;
+  background: -webkit-gradient(linear, left top, right top, from(#36b06a), color-stop(84.16%, #43a5ba));
+  background: linear-gradient(90deg, #36b06a 0%, #43a5ba 84.16%);
 }
 
 .button-secondary {
@@ -579,7 +583,7 @@ a.no-decoration:hover, footer .footer-group-list a:hover, footer .footer-group-s
 }
 
 nav.main-nav {
-  background-color: #f5efe0;
+  background-color: #ffffff;
   position: relative;
   z-index: 100;
   /** Override Bootstrap */
@@ -667,52 +671,13 @@ nav.main-nav .active .nav-link {
   font-weight: inherit;
 }
 
-.nav-pills {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-@media screen and (max-width: 600px) {
-  .nav-pills {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-}
-
 .nav-pills .nav-link.nav-link {
-  font-size: 1rem;
+  border-radius: 3.75rem;
+  font-size: 1.25rem;
   font-weight: 700;
-  letter-spacing: -0.01rem;
+  letter-spacing: -0.02rem;
   line-height: 2;
   color: #9e9e9e;
-}
-
-@media screen and (max-width: 600px) {
-  .nav-pills .nav-link.nav-link {
-    font-size: 1.25rem;
-  }
 }
 
 .nav-pills .nav-link.nav-link svg,
@@ -1009,15 +974,15 @@ nav.main-nav .active .nav-link {
 
 .banner {
   padding: 0.75rem 2.25rem;
-  background: #f5efe0;
+  background: rgba(74, 165, 112, 0.2);
   border-top: 1px solid #e6e6e6;
-  color: #535353;
+  color: #408f61;
 }
 
 .banner-summary {
   margin-left: 0.375rem;
   font-size: 0.9rem;
-  font-weight: 400;
+  font-weight: 500;
   letter-spacing: 0.01rem;
   line-height: 1.75;
 }
