--- a/docs/scss/components/_banner.scss
+++ b/docs/scss/components/_banner.scss
@@ -2,11 +2,11 @@
     padding: $baseUnit $baseUnit * 3;
     &-summary {
         margin-left: $baseUnit * 0.5;
-        @include caption(1.75, $regular);
+        @include caption(1.75, $medium);
     }
-    background: $backgroundColor;
+    background: rgba(74, 165, 112, 0.2);
     border-top: 1px solid $hr;
-    color: $bodyText;
+    color: $primaryHover;
     button.button {
         margin-left: $baseUnit * 0.5;
         @include media-break-point-down {
