--- a/docs/scss/components/_navbar.scss
+++ b/docs/scss/components/_navbar.scss
@@ -1,6 +1,6 @@
 nav {
   &.main-nav {
-    background-color: $backgroundColor;
+    background-color: $white;
     position: relative;
     z-index: 100;
     .navbar-inner {
@@ -52,9 +52,9 @@ nav {
 
 .nav {
   &-pills {
-    @include down-sm-flex-row;
     .nav-link.nav-link {
-      @include body-text(2, $bold);
+      border-radius: $baseUnit * 5;
+      @include heading5(2, $bold);
       color: $disabledText;
       svg,
       span {
